xxx/xxx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xxx-delivery-pipelines
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: when6-eventsource-svc
            port:
              number: 80
        path: /webhooks/xxx/when6/github-398c1da8-944c-11ec-811c-acde48001122
        pathType: ImplementationSpecific
